app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    "nginx.ingress.kubernetes.io/rewrite-target": "/"
spec:
  rules:
  - host: api.arvofinance.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: react-app
          servicePort: 80
      - path: /api
        backend:
          serviceName: nodejs-app
          servicePort: 80
